[gd_scene load_steps=34 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://d3s8yxuvpmekm" path="res://addons/PlayerCharacter/StateMachine/PlayerCharacterScript.gd" id="1_h128t"]
[ext_resource type="Script" uid="uid://b0fbr48rbvn27" path="res://addons/PlayerCharacter/Camera/CameraScript.gd" id="2_x12n0"]
[ext_resource type="Material" uid="uid://d2x17ijo0ckuc" path="res://materials/rope_material/rope.tres" id="3_2rfya"]
[ext_resource type="Script" uid="uid://jmhp0f7bfb5f" path="res://scripts/attack_system.gd" id="4_mx8g3"]
[ext_resource type="Script" uid="uid://dh15xksi1hpf6" path="res://scripts/interact_system.gd" id="5_h8602"]
[ext_resource type="Script" uid="uid://bpt1ql68y6yco" path="res://addons/PlayerCharacter/StateMachine/ClimbIdleStateScript.gd" id="10_17hed"]
[ext_resource type="Script" uid="uid://b36xvir18mivi" path="res://addons/PlayerCharacter/StateMachine/RopeStateScript.gd" id="11_ypkm2"]
[ext_resource type="Script" uid="uid://0a4mqiq44568" path="res://addons/PlayerCharacter/StateMachine/ClimbTurnStateScript.gd" id="12_qmq2g"]
[ext_resource type="Script" uid="uid://0a1kpulymifk" path="res://addons/PlayerCharacter/StateMachine/ClimbLedgeStateScript.gd" id="13_d3h1q"]
[ext_resource type="Texture2D" uid="uid://bpb435aekvx6k" path="res://images/aim_dot.png" id="14_tp4dy"]
[ext_resource type="Texture2D" uid="uid://miuh7r4o5afs" path="res://images/aim_square.png" id="15_67iuh"]
[ext_resource type="Script" uid="uid://dx02l6p6behb8" path="res://addons/PlayerCharacter/UI/HUDScript.gd" id="16_5jm78"]
[ext_resource type="FontFile" uid="uid://bwr73i28ligrq" path="res://addons/Arts/Ticketing.ttf" id="17_ryxgj"]
[ext_resource type="Script" uid="uid://sca7ypsol83f" path="res://addons/PlayerCharacter/StateMachine/StateMachineScript.gd" id="54_e0r17"]
[ext_resource type="Script" uid="uid://stil4xkf3tk0" path="res://addons/PlayerCharacter/StateMachine/IdleStateScript.gd" id="55_dayh2"]
[ext_resource type="Script" uid="uid://blt7dest23fk0" path="res://addons/PlayerCharacter/StateMachine/WalkStateScript.gd" id="56_w3td4"]
[ext_resource type="Script" uid="uid://5gk47o641xgt" path="res://addons/PlayerCharacter/StateMachine/RunStateScript.gd" id="57_gwv0a"]
[ext_resource type="Script" uid="uid://dvu58wf01wils" path="res://addons/PlayerCharacter/StateMachine/JumpStateScript.gd" id="58_gwv0a"]
[ext_resource type="Script" uid="uid://bh3rdvokmrar1" path="res://addons/PlayerCharacter/StateMachine/InairStateScript.gd" id="59_bqtt6"]
[ext_resource type="Script" uid="uid://bhoqhv7escpyx" path="res://addons/PlayerCharacter/StateMachine/CrouchStateScript.gd" id="60_tu3bf"]

[sub_resource type="Curve" id="Curve_h128t"]
_limits = [0.0, 60.0, 0.0, 1.0]
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0, Vector2(1, 60), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_takn3"]
_limits = [0.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, 6), 0.0, 0.0, 0, 0, Vector2(1, 6), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bkys"]
albedo_color = Color(0.196078, 0.223529, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ypkm2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ypkm2"]
albedo_color = Color(0.686387, 0.429925, 1, 1)

[sub_resource type="Curve3D" id="Curve3D_d3h1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rfya"]
bg_color = Color(0.0962047, 0.0962048, 0.0962047, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypkm2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_ypkm2"]
ProgressBar/colors/font_color = Color(0, 0, 0, 1)
ProgressBar/colors/font_outline_color = Color(0, 0, 0, 1)
ProgressBar/constants/outline_size = 0
ProgressBar/font_sizes/font_size = 16
ProgressBar/fonts/font = null
ProgressBar/styles/background = SubResource("StyleBoxFlat_2rfya")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ypkm2")

[sub_resource type="LabelSettings" id="LabelSettings_4e1aq"]
line_spacing = 5.0
font = ExtResource("17_ryxgj")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3aho1"]
line_spacing = 5.0
font = ExtResource("17_ryxgj")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="PlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
collision_mask = 97
floor_block_on_wall = false
floor_max_angle = 1.13446
floor_snap_length = 0.0
platform_floor_layers = 4278190081
script = ExtResource("1_h128t")
desiredMoveSpeedCurve = SubResource("Curve_h128t")
maxSpeed = 10.0
inAirMoveSpeedCurve = SubResource("Curve_takn3")
hitGroundCooldown = 0.2
bunnyHopDmsIncre = 3.0
baseHitboxHeight = 2.0
baseModelHeight = 1.0
heightChangeSpeed = 10.0
inAirMoveAccel = 30.0
inAirMoveDeccel = 30.0
crouchSpeed = 5.0
crouchAccel = 7.0
crouchDeccel = 7.0
continiousCrouch = true
crouchHitboxHeight = 1.2
crouchModelHeight = 0.6
walkSpeed = 6.0
walkAccel = 30.0
walkDeccel = 60.0
runSpeed = 12.0
runAccel = 30.0
runDeccel = 60.0
climbSpeed = 4.0
climbAccel = 30.0
climbDeccel = 60.0
wallPullForce = 0.2
wallNormalOffsetDown = 0.2
wallNormalOffsetUp = 0.5
jumpHeight = 2.0
jumpTimeToPeak = 0.35
jumpTimeToFall = 0.35
jumpCooldown = 0.2
coyoteJumpCooldown = 0.3
ropeSpeed = 20.0
ropeAccel = 30.0
ropeDeccel = 60.0
ropeMinDistance = 1.0
moveForwardAction = "move_forward"
moveBackwardAction = "move_back"
moveLeftAction = "move_left"
moveRightAction = "move_right"
runAction = "run"
crouchAction = "crouch"
jumpAction = "jump"
climbAction = "pickaxe"
ropeAction = "grapling_hook"
maxStamina = 100.0
jumpStaminaConsumption = 15.0
climbStaminaConsumption = 5.0
ropeStaminaConsumption = 20.0
staminaBaseRecovery = 100.0

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.55, 0)
script = ExtResource("2_x12n0")
XAxisSensibility = 0.05
YAxisSensibility = 0.05
maxUpAngleView = -90.0
maxDownAngleView = 90.0
startFOV = 90.0
baseCameraLerpSpeed = 8.0
crouchCameraLerpSpeed = 8.0
crouchCameraDepth = -0.6
bobFrequency = 1.1
camTiltRotationSpeed = 2.2
onFloorTiltValDivider = 1.6
mouseModeAction = "mouseMode"

[node name="Camera" type="Camera3D" parent="CameraHolder"]
cull_mask = 3
current = true
fov = 90.0
near = 0.01
far = 1000.0

[node name="CameraWallCheck" type="RayCast3D" parent="CameraHolder/Camera"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.3, 0)
hit_back_faces = false

[node name="RopeCheck" type="RayCast3D" parent="CameraHolder/Camera"]
transform = Transform3D(-1.64203e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -15, 0)

[node name="BreakableObjectCheck" type="RayCast3D" parent="CameraHolder/Camera"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 4
hit_back_faces = false
collide_with_areas = true

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
layers = 2
material_override = SubResource("StandardMaterial3D_6bkys")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 3, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, -3, 0)
debug_shape_custom_color = Color(0, 0, 0.956863, 1)

[node name="LedgeDetector" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)

[node name="LedgeCheckHigh" type="RayCast3D" parent="LedgeDetector"]
transform = Transform3D(1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 0.3, 0)
debug_shape_custom_color = Color(0.93484, 0.418678, 3.85046e-07, 1)
debug_shape_thickness = 4

[node name="LedgeCheckLow" type="RayCast3D" parent="LedgeDetector"]
transform = Transform3D(1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
debug_shape_custom_color = Color(0.93484, 0.418678, 3.85046e-07, 1)
debug_shape_thickness = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="LedgeDetector"]
transform = Transform3D(1.90037e-16, 1.73901e-08, -0.0994599, 0.09946, -1.73901e-08, -8.84595e-23, -4.34753e-09, -0.39784, -4.34753e-09, 0, 0.3, -0.5)
visible = false
mesh = SubResource("CylinderMesh_ypkm2")

[node name="WallDetector" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)

[node name="WallCenterCheck" type="RayCast3D" parent="WallDetector"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.3, 0)
debug_shape_custom_color = Color(0.320175, 0.986349, 1.54018e-06, 1)

[node name="WallLeftCheck" type="RayCast3D" parent="WallDetector"]
transform = Transform3D(-4.37114e-08, 1, -1.06581e-14, -1, -4.37114e-08, 0, -4.02341e-21, 1.06581e-14, 1, 0, 0, 0)
debug_shape_custom_color = Color(0.320175, 0.986349, 1.54018e-06, 1)

[node name="WallRightCheck" type="RayCast3D" parent="WallDetector"]
transform = Transform3D(4.37114e-08, -1, 8.74228e-08, -1, -4.37114e-08, 0, 3.82137e-15, -8.74228e-08, -1, 0, 0, 0)
debug_shape_custom_color = Color(0.320175, 0.986349, 1.54018e-06, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WallDetector"]
transform = Transform3D(1.90037e-16, 1.73901e-08, -0.0994599, 0.09946, -1.73901e-08, 0, -4.34753e-09, -0.39784, -4.34753e-09, 0, 0, -0.707676)
visible = false
mesh = SubResource("CylinderMesh_ypkm2")

[node name="WallDetectorTmp" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)

[node name="WallCenterCheckTmp" type="RayCast3D" parent="WallDetectorTmp"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.3, 0)
debug_shape_custom_color = Color(0.320175, 0.986349, 1.54018e-06, 1)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WallDetectorTmp"]
transform = Transform3D(1.90037e-16, 1.73901e-08, -0.0994599, 0.09946, -1.73901e-08, -5.29572e-24, -4.34753e-09, -0.39784, -4.34753e-09, 0, 0, -0.707676)
visible = false
material_override = SubResource("StandardMaterial3D_ypkm2")
mesh = SubResource("CylinderMesh_ypkm2")
skeleton = NodePath("../../WallDetector")

[node name="Rope" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="RopePath3D" type="Path3D" parent="Rope"]
curve = SubResource("Curve3D_d3h1q")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Rope/RopePath3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
cast_shadow = 0
polygon = PackedVector2Array(0.1, 0, 0.071, 0.071, 0, 0.1, -0.071, 0.071, -0.1, 0, -0.071, -0.071, 0, -0.1, 0.071, -0.071)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 1
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = ExtResource("3_2rfya")

[node name="AttackSystem" type="Node3D" parent="."]
script = ExtResource("4_mx8g3")
ray_length = 2.2

[node name="InteractSystem" type="Node3D" parent="."]
script = ExtResource("5_h8602")
input_name = "interact3D"
ray_length = 3.0
mask = 8

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("54_e0r17")
initialState = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("55_dayh2")
metadata/_custom_type_script = "uid://stil4xkf3tk0"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("56_w3td4")
metadata/_custom_type_script = "uid://blt7dest23fk0"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("57_gwv0a")
metadata/_custom_type_script = "uid://5gk47o641xgt"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("58_gwv0a")
metadata/_custom_type_script = "uid://dvu58wf01wils"

[node name="InairState" type="Node" parent="StateMachine"]
script = ExtResource("59_bqtt6")
metadata/_custom_type_script = "uid://bh3rdvokmrar1"

[node name="CrouchState" type="Node" parent="StateMachine"]
script = ExtResource("60_tu3bf")
metadata/_custom_type_script = "uid://bhoqhv7escpyx"

[node name="ClimbIdleState" type="Node" parent="StateMachine"]
script = ExtResource("10_17hed")

[node name="ClimbTurnState" type="Node" parent="StateMachine"]
script = ExtResource("12_qmq2g")

[node name="RopeState" type="Node" parent="StateMachine"]
script = ExtResource("11_ypkm2")
metadata/_custom_type_script = "uid://gjekmtw4eb1e"

[node name="ClimbLedgeState" type="Node" parent="StateMachine"]
script = ExtResource("13_d3h1q")
metadata/_custom_type_script = "uid://gjekmtw4eb1e"

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("16_5jm78")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="AimDot" type="TextureRect" parent="HUD/CenterContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("14_tp4dy")
expand_mode = 2
stretch_mode = 5

[node name="SquaredReticle" type="TextureRect" parent="HUD/CenterContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("15_67iuh")
expand_mode = 4

[node name="StaminaContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.5
offset_right = 50.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/StaminaContainer"]
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="ProgressBar" type="ProgressBar" parent="HUD/StaminaContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 6)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_ypkm2")
show_percentage = false

[node name="Crosshair" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayCharInfos" type="HBoxContainer" parent="HUD"]
visible = false
offset_top = 7.0
offset_right = 804.0
offset_bottom = 357.0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PlayCharInfos"]
layout_mode = 2

[node name="CurrentStateLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Current state : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Desired move speed : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VelocityLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Velocity : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nb jumps in air allowed :"
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="StaminaLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Stamina : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="WallCheckLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Wall collide : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/PlayCharInfos"]
layout_mode = 2

[node name="CurrentStateLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="VelocityLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="StaminaLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="WallCheckLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="PlayCharInfos2" type="HBoxContainer" parent="HUD"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -259.0
offset_top = 13.0
offset_right = 99.0
offset_bottom = 43.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PlayCharInfos2"]
layout_mode = 2

[node name="FramesPerSecondLabel" type="Label" parent="HUD/PlayCharInfos2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Frames per seconds : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/PlayCharInfos2"]
layout_mode = 2

[node name="FramesPerSecondLabelText" type="Label" parent="HUD/PlayCharInfos2/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "....."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1
